# leetcode_practice

./: CMakeLists.txt  main.cpp
cpptest/: Tensor.cpp  armadillo_test.cpp  const_test.cpp  copy_control.cpp  copy_control_test.cpp  dynamic_memory_test.cpp  reference_test.cpp  smart_pointer.cpp  template_builder.cpp  template_test.cpp  tensor_test.cpp  typeid.cpp  virtual_func_test.cpp
include/: Tensor.h  Tensor.hpp  armadillo_test.h  copy_control.h  copy_control_test.h  dynamic_memory_test.h  template_test.h  utils.h
solutions/: utils.cpp
solutions/0001-two_sum/: [1]两数之和.cpp  two_sum.cpp
solutions/0004-two_sorted_array_median/: two_sorted_array_median.cpp
solutions/0005-longest_palindromic_substr/: longest_palindromic_substr.cpp
solutions/0010-regex_match/: regex_match.cpp
solutions/0021-merge_two_list/: [21]合并两个有序链表.cpp
solutions/0023-merge_k_sorted_lists/: [23]合并 K 个升序链表.cpp
solutions/0033-rotated_sorted_array_search/: rotated_sorted_array_search.cpp
solutions/0034-first_and_last_pos/: first_and_last_pos.cpp
solutions/0043-multiply_string/: multiply_string.cpp
solutions/0047-permutation-ii/: permutation_ii.cpp
solutions/0047-permutation_ii/: permutation_ii.cpp
solutions/0053-max_subarray/: max_subarray.cpp
solutions/0064-min_path_sum/: min_path_sum.cpp
solutions/0069-sqrtx/: sqrtx.cpp
solutions/0070-climbing_stairs/: climbing_stairs.cpp
solutions/0072-edit_distance/: edit_distance.cpp
solutions/0079-word_search/: word_search.cpp
solutions/0081-rotated_sorted_array_search_ii/: rotated_sorted_array_search_ii.cpp
solutions/0086-partition_list/: [86]分隔链表.cpp
solutions/0091-decode_ways/: decode_ways.cpp
solutions/0097-interleaving_string/: interleaving_string.cpp
solutions/0111-minimum_depth_of_binary_tree/: min_depth_of_binary_tree.cpp
solutions/0120-triangle/: triangle.cpp
solutions/0130-surrounded_regions/: board1.txt  expect1.txt  surrounded_regions.cpp
solutions/0131-palindrome_partitioning/: palindrome-partitioning.cpp
solutions/0174-dungeon_game/: dungeon_game.cpp
solutions/0198-house_robber_1/: house_robber_1.cpp
solutions/0198-house_robber_i/: house_robber_i.cpp
solutions/0200-number_of_islands/: grid1.txt  grid2.txt  number_of_islands.cpp
solutions/0213-house_robber_2/: house_robber_2.cpp
solutions/0216-combination_sum_iii/: combination_sum_iii.cpp
solutions/0222-complete_binary_tree_nodes_num/: count_complete_binary_tree_nodes.cpp
solutions/0257-binary_tree_paths/: binary_tree_paths.cpp
solutions/0300-longest_increasing_subsequence/: longest_increase_subseq.cpp
solutions/0306-additive_number/: additive_number.cpp
solutions/0323-connected_component_in_graph/: connected_components.cpp
solutions/0354-russian_doll_envelopes/: russian_doll_envelopes.cpp
solutions/0401-binary_watch/: binary_watch.cpp
solutions/0410-split_array/: split_array.cpp
solutions/0416-partition_equal_subset_sum/: partition_equal_sum_subset.cpp
solutions/0473-matchsticks_to_square/: matchsticks_to_square.cpp
solutions/0494-target_sum/: target_sum.cpp
solutions/0518-coin_change_ii/: coin_change_II.cpp
test_files/: temu.txt
tips/: typeid.cpp
(+28 files in other folders)
